# space-adventures

./: .env.example  .gitignore  AGENTS.md  AI-AGENT-GUIDE.md  AI-FIRST-IMPLEMENTATION-SUMMARY.md  AUTONOMOUS_AGENT_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_AGENT_SYSTEM_COMPLETE.md  CLAUDE.md  DECISIONS.md  DYNAMIC-STORY-ENGINE-IMPLEMENTATION.md  ECONOMY-PHASE-8-SUMMARY.md  ECONOMY-TESTING-REPORT.md  GODOT-REVIEW-CHECKLIST.md  INTEGRATION-TEST.md  JOURNAL.md  LICENSE  ORCHESTRATOR-STATUS.md  PROJECT-STATE.json  README.md  ROADMAP.md  STATUS.md  achievement_implementation_summary.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  redis.conf  verify_systems.sh
docs/: ACHIEVEMENTS.md  AI-AGENT-MEMORY-SYSTEM.md  AI-FIRST-ARCHITECTURE-DIAGRAM.txt  AI-FIRST-ARCHITECTURE.md  AI-FIRST-DEVELOPER-GUIDE.md  CLAUDE.md  README.md  (+24 more)
server/: .env.example  pyproject.toml
server/src/: __init__.py  config.py  main.py
server/src/api/: game.py  ws.py
server/src/data/missions/: mission_distress_signal_alpha.json  mission_first_contact_protocol.json  mission_first_contact_protocol_hybrid.json  mission_orbital_station_salvage.json  mission_test_rewards.json  mission_tutorial.json  mission_underground_bunker_exploration.json
server/src/data/parts/: hull_parts.json  life_support_parts.json  power_parts.json  weapons_parts.json
server/src/data/systems/: ship_systems.json
server/src/game_master/: __init__.py  agent.py  prompts.py  tools.py
server/src/memory/: __init__.py  manager.py
server/src/state/: __init__.py  database.py  models.py
(+343 files in other folders)
